<resources>
    <string name="app_name">Game Buddy</string>
    <string name="app_title">GameBuddy</string>
    <string name="user_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="pass_hint">Password</string>
    <string name="pass_hint2">Confirm Password</string>
    <string name="login_btn">Login</string>
    <string name="register_btn">Register</string>
    <string name="to_reg_btn">Click here to Register</string>
    <string name="to_login_btn">Already have an Account? Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--buttons-->
    <string name="back">←</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="connect">Connect</string>
    <string name="email">Send Email</string>
    <string name="change_image">Change Image</string>
    <!--reviews-->
    <string name="add_review">Add Review</string>
    <string name="review_hint">Add Review Here</string>
    <!--games-->
    <string name="add_game">Add Game</string>
    <string name="edit_game">Edit Game</string>
    <string name="game_title">Name of Game</string>
    <string name="rank">Rank</string>
    <string name="server">Server(s)</string>
    <string name="role">Preferred Role(s)</string>
    <!--tournaments-->
    <string name="add_tournament">Add Tournament</string>
    <string name="edit_tournament">Edit Tournament</string>
    <string name="tournament_name">Tournament Name</string>
    <string name="curr_cap">Current Capacity</string>
    <string name="max_cap">Max Capacity</string>
    <string name="feat_game">Featured Game</string>
    <string name="feat_game_prompt">Select a Game</string>
    <string-array name="feat_game_list">
        <item>Valorant</item>
        <item>League of Legends</item>
        <item>Apex Legends</item>
    </string-array>
    <string name="description">Description</string>
    <string name="cut_date">Cut-off Date</string>
    <string name="start_date">Start Date</string>
    <string name="instructions">Instructions</string>
    <!--connect-->
    <string name="connect_message">Connect</string>
    <string name="connect_hint">Let\'s play! Add me on:</string>
    <!--profile-->
    <string name="edit_profile">Edit Profile</string>
    <string name="discord">Discord</string>
    <string name="twitter">Twitter</string>
    <string name="others">Other Socials</string>
    <string name="bio">Bio</string>
    <string name="message">Message</string>
    <string name="gaming_hours">Gaming Hours</string>


    <!--    Player Filter and Sort Options-->
    <string-array name="filter_player_options">
        <item>Valorant</item>
        <item>League of Legends</item>
        <item>Apex Legends</item>
    </string-array>

    <string-array name="sort_player_options">
        <item>Highest Ratings</item>
        <item>Lowest Ratings</item>
    </string-array>

    <!--    Tournament Filter and Sort Options-->
    <string-array name="filter_tournament_options">
        <item>All Games</item>
        <item>Valorant</item>
        <item>League of Legends</item>
        <item>Apex Legends</item>
    </string-array>

    <string-array name="sort_tournament_options">
        <item>Nearest Start Date</item>
        <item>Farthest Start Date</item>
    </string-array>

    <!--    History Sort Options-->
    <string-array name="sort_history_options">
        <item>Highest Ratings</item>
        <item>Latest Connect Date</item>
    </string-array>

    <!--    image options-->
    <string-array name="choose_image_options">
        <item>avatar1</item>
        <item>avatar2</item>
        <item>avatar3</item>
        <item>avatar4</item>
    </string-array>

</resources>