<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:textSize="36sp"
        android:textStyle="bold"
        android:text="@string/app_title"
        android:gravity="center" />

    <EditText
        android:id="@+id/et_username"
        android:hint="@string/user_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginStart="25sp"
        android:layout_marginEnd="25sp" />

    <EditText
        android:id="@+id/et_email"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginStart="25sp"
        android:layout_marginEnd="25sp" />

    <EditText
        android:id="@+id/et_password"
        android:hint="@string/pass_hint"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginStart="25sp"
        android:layout_marginEnd="25sp" />

    <EditText
        android:id="@+id/et_password2"
        android:hint="@string/pass_hint2"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginStart="25sp"
        android:layout_marginEnd="25sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:text="@string/register_btn"
        android:textColor="@color/btn_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/btn_background"
        android:layout_gravity="center"
        android:layout_marginTop="40sp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_to_Login"
        android:text="@string/to_login_btn"
        android:textColor="@color/btn_text"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:layout_gravity="center" />

</LinearLayout>