<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddGameActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_back"
        android:text="@string/back"
        android:textColor="@color/btn_text"
        android:textSize="48sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/background"
        android:gravity="start" />

    <TextView
        android:id="@+id/tv_add_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        app:layout_constraintTop_toBottomOf="@id/btn_back"
        android:gravity="center"
        android:text="@string/add_game"
        android:textStyle="bold"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/tv_game_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:layout_marginStart="10sp"
        app:layout_constraintTop_toBottomOf="@id/tv_add_game"
        android:gravity="start"
        android:text="@string/game_title"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/spinner_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:entries="@array/feat_game_list"
        android:prompt="@string/feat_game_prompt"
        android:spinnerMode="dropdown"
        app:layout_constraintTop_toBottomOf="@id/tv_game_title"/>

    <TextView
        android:id="@+id/tv_player_rank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:layout_marginStart="10sp"
        app:layout_constraintTop_toBottomOf="@id/spinner_game"
        android:gravity="start"
        android:text="@string/rank"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/et_player_rank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        app:layout_constraintTop_toBottomOf="@id/tv_player_rank"/>

    <TextView
        android:id="@+id/tv_player_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:layout_marginStart="10sp"
        app:layout_constraintTop_toBottomOf="@id/et_player_rank"
        android:gravity="start"
        android:text="@string/server"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/et_player_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        app:layout_constraintTop_toBottomOf="@id/tv_player_server"/>

    <TextView
        android:id="@+id/tv_player_role"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:layout_marginStart="10sp"
        app:layout_constraintTop_toBottomOf="@id/et_player_server"
        android:gravity="start"
        android:text="@string/role"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/et_player_role"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        app:layout_constraintTop_toBottomOf="@id/tv_player_role" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55sp"
        android:layout_marginStart="50sp"
        android:layout_marginEnd="50sp"
        app:layout_constraintTop_toBottomOf="@+id/et_player_role"
        android:orientation="horizontal" >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel_game"
            android:layout_width="130sp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginEnd="50sp"
            android:background="@color/cancel"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/btn_text" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add_game"
            android:layout_width="130sp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@color/btn_background"
            android:text="@string/add"
            android:textAllCaps="false"
            android:textColor="@color/btn_text" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>