<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditGameActivity">

    <LinearLayout
        android:id="@+id/btn_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_back"
            android:layout_width="328dp"
            android:layout_height="75dp"
            android:background="@color/background"
            android:textAlignment="textStart"
            android:text="@string/back"
            android:textColor="@color/button"
            android:textSize="48sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_delete"
            android:layout_width="82dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:background="@color/background"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textColor="@color/button"
            android:textAlignment="center"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_edit_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        app:layout_constraintTop_toBottomOf="@id/btn_panel"
        android:gravity="center"
        android:text="@string/edit_game"
        android:textStyle="bold"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/tv_game_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:layout_marginStart="10sp"
        app:layout_constraintTop_toBottomOf="@id/tv_edit_game"
        android:gravity="start"
        android:text="@string/game_title"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/et_game_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        app:layout_constraintTop_toBottomOf="@id/tv_game_title"/>

    <TextView
        android:id="@+id/tv_player_rank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:layout_marginStart="10sp"
        app:layout_constraintTop_toBottomOf="@id/et_game_title"
        android:gravity="start"
        android:text="@string/rank"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/et_player_rank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        app:layout_constraintTop_toBottomOf="@id/tv_player_rank"/>

    <TextView
        android:id="@+id/tv_player_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:layout_marginStart="10sp"
        app:layout_constraintTop_toBottomOf="@id/et_player_rank"
        android:gravity="start"
        android:text="@string/server"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/et_player_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        app:layout_constraintTop_toBottomOf="@id/tv_player_server"/>

    <TextView
        android:id="@+id/tv_player_role"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:layout_marginStart="10sp"
        app:layout_constraintTop_toBottomOf="@id/et_player_server"
        android:gravity="start"
        android:text="@string/role"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/et_player_role"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        app:layout_constraintTop_toBottomOf="@id/tv_player_role"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55sp"
        app:layout_constraintTop_toBottomOf="@id/et_player_role">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="85sp"
            android:layout_marginRight="85sp" >

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cancel_game"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginEnd="35sp"
                android:layout_column="0"
                android:background="@color/cancel"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_edit_game"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_column="1"
                android:background="@color/button"
                android:text="@string/update"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>