<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ConnectActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_back"
        android:text="@string/back"
        android:textColor="@color/button"
        android:textSize="48sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/background"
        android:gravity="start" />

    <TextView
        android:id="@+id/tv_connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_back"
        android:gravity="center"
        android:text="@string/connect_message"
        android:textStyle="bold"
        android:textSize="32sp"
        android:layout_marginTop="10sp"/>

    <EditText
        android:id="@+id/et_connect_message"
        android:hint="@string/connect_hint"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/tv_connect"
        android:inputType="textMultiLine"
        android:lines="20"
        android:gravity="top|start"
        android:maxLines="30"
        android:scrollbars="vertical"
        android:background="@drawable/border"
        android:layout_marginLeft="85sp"
        android:layout_marginRight="85sp"
        android:padding="10sp"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_connect_message">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="85sp"
            android:layout_marginEnd="85sp"
            android:layout_marginTop="25sp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginEnd="35sp"
                android:layout_column="0"
                android:background="@color/cancel"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_send_email"
                android:layout_width="78dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="end"
                android:background="@color/button"
                android:text="@string/connect"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>