<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTournamentActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_back"
        android:text="@string/back"
        android:textColor="@color/btn_text"
        android:textSize="48sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/background"
        android:gravity="start" />

    <TextView
        android:id="@+id/tv_add_tournament"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        app:layout_constraintTop_toBottomOf="@id/btn_back"
        android:gravity="center"
        android:text="@string/add_tournament"
        android:textStyle="bold"
        android:textSize="32sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="130sp"
        app:layout_constraintTop_toBottomOf="@id/tv_add_tournament">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_tourney_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:layout_marginStart="10sp"
                android:gravity="start"
                android:text="@string/tournament_name"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/et_tourney_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                app:layout_constraintTop_toBottomOf="@id/tv_tourney_name" />

            <TextView
                android:id="@+id/tv_curr_cap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:layout_marginStart="10sp"
                android:gravity="start"
                android:text="@string/curr_cap"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@id/et_tourney_name" />

            <EditText
                android:id="@+id/et_curr_cap"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                app:layout_constraintTop_toBottomOf="@id/tv_curr_cap"/>

            <TextView
                android:id="@+id/tv_max_cap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:layout_marginStart="10sp"
                android:gravity="start"
                android:text="@string/max_cap"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@id/et_curr_cap" />

            <EditText
                android:id="@+id/et_max_cap"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                app:layout_constraintTop_toBottomOf="@id/tv_max_cap"/>

            <TextView
                android:id="@+id/tv_feat_game"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:layout_marginStart="10sp"
                android:gravity="start"
                android:text="@string/feat_game"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@id/et_max_cap" />

            <Spinner
                android:id="@+id/spinner_game"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:entries="@array/feat_game_list"
                android:prompt="@string/feat_game_prompt"
                android:spinnerMode="dropdown"
                app:layout_constraintTop_toBottomOf="@id/tv_feat_game" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:layout_marginStart="10sp"
                android:gravity="start"
                android:text="@string/description"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@id/spinner_game" />

            <EditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:inputType="textMultiLine"
                android:lines="5"
                android:gravity="top|start"
                android:maxLines="15"
                android:scrollbars="vertical"
                android:background="@drawable/border"
                app:layout_constraintTop_toBottomOf="@id/tv_description"/>

            <TextView
                android:id="@+id/tv_cut_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:layout_marginStart="10sp"
                android:gravity="start"
                android:text="@string/cut_date"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@id/et_description" />

            <EditText
                android:id="@+id/et_cut_date"
                android:inputType="date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                app:layout_constraintTop_toBottomOf="@id/tv_cut_date"/>

            <TextView
                android:id="@+id/tv_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:layout_marginStart="10sp"
                android:gravity="start"
                android:text="@string/start_date"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@id/et_cut_date" />

            <EditText
                android:id="@+id/et_start_date"
                android:inputType="date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                app:layout_constraintTop_toBottomOf="@id/tv_start_date"/>

            <TextView
                android:id="@+id/tv_instruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:layout_marginStart="10sp"
                android:gravity="start"
                android:text="@string/instructions"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@id/et_start_date" />

            <EditText
                android:id="@+id/et_instruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:inputType="textMultiLine"
                android:lines="10"
                android:gravity="top|start"
                android:maxLines="30"
                android:scrollbars="vertical"
                android:background="@drawable/border"
                app:layout_constraintTop_toBottomOf="@id/tv_instruction"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:layout_marginStart="50sp"
                android:layout_marginEnd="50sp"
                android:layout_marginBottom="20sp"
                app:layout_constraintTop_toBottomOf="@+id/et_instruction"
                android:orientation="horizontal" >

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_cancel_tournament"
                    android:layout_width="130sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginEnd="50sp"
                    android:background="@color/cancel"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/btn_text" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_add_tournament"
                    android:layout_width="130sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="@color/btn_background"
                    android:text="@string/add"
                    android:textAllCaps="false"
                    android:textColor="@color/btn_text" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>